Added Check for deleting Entities whether apart of Schema or Classification